# blk360-android-demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/imerso/blk360demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/demo/include/: debuglog.hpp
app/src/main/cpp/demo/include/blk360wrapper/: Blk360Wrapper.hpp  blk360Util.hpp
app/src/main/cpp/demo/include/jni/: JniUtils.hpp
app/src/main/cpp/demo/include/scan_tools/: bounding_box.h  downsample.h  image_metadata.h  load_raw_scan.h  make_topdown_image.h  save.h  scan.h  write_png.h
app/src/main/cpp/demo/include/util/: Bmp.hpp
app/src/main/cpp/demo/src/: Blk360Wrapper.cpp  debuglog.cpp  native-binder.cpp
app/src/main/java/com/demo/blk360demo/: CreateScanAsync.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/imerso/blk360demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
